--- a/css/style.css
+++ b/css/style.css
@@ -9,23 +9,42 @@
 body,
 input,
 button {
- font-family: 'Roboto', sans-serif;
+ font-family: 'Montserrat', sans-serif;
 }
 
 body {
-  font: 1em/1.5;
-  color: #184f68;
-	background: #accbd9;
+	font: 1em/1.5;
+	color: #184f68;
+	background: linear-gradient(to bottom, #61646B 30%, rgb(16, 26, 49));
 }
 
 header {
-	text-align: center;  
+	height: 100vh;
+	text-align: center;
+	background-image: url('../img/background.jpg');
+	display: flex;
+	flex-direction: column; 
+	align-items: center;
+	justify-content: space-evenly;
+	background-size: cover;
+	margin-bottom: 100px;
+	box-shadow:inset 0 -60px 30px 5px #61646B;
 }
 
 h1 {
-	font-size: 2.5em;
+	font-size: 5em;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.45);
 	margin: 0;
+	font-family: 'Dancing Script', cursive;
+}
+
+#down {
+	font-size: 3em;
+	padding: 20px;
+}
+
+#down:hover {
+	cursor: pointer;
 }
 
 a {
@@ -38,7 +57,8 @@ a {
 
 form {
 	padding: .875em 1.875em 1.875em;
-	background: #85b5ca;
+	background: rgba(245, 248, 255, 0.432);
+	border: 1px solid black;
 }
 
 fieldset,
@@ -60,7 +80,7 @@ button {
 legend {
 	font-weight: 500;
 	padding-top: .5em;
-	border-top: 2px solid #679cb3;
+	border-top: 1px solid black;
 	margin-bottom: 1.125em;
 }
 
@@ -85,8 +105,8 @@ input {
 	font-size: 1em;
 	font-weight: 500;
 	padding: .8em;
-	background: #c1deeb;
-	border: 2px solid #c1deeb;
+	background: #748891;
+	border: 1px solid black;
 	outline: none;
 }
 
@@ -123,7 +143,7 @@ button:hover {
 }
 
 .valid {
-	border: 2px solid #c1deeb;
+	border: 1px solid #black;
 }
 
 .errorMsg {
@@ -135,6 +155,10 @@ button:hover {
 	font-size: 1.25em;
 	color: black;
 	text-align: center;
+}
+
+::placeholder {
+	color: white;
 }
 
 /* ================================= 
