--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,9 @@ button:hover {
 .errorMsg {
 	color: rgb(212, 0, 0);
 	font-size: .9em;
+	background-color: white;
+	border: 1px solid red;
+	padding: 2px;
 }
 
 #totalCostMessage {
@@ -159,7 +162,8 @@ button:hover {
 }
 
 ::placeholder {
-	color: white;
+	color: #184c62;
+	font-size: .75em;
 }
 
 /* ================================= 
